--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "framer-motion": "^11.3.31",
     "lucide-react": "^0.468.0",
     "react": "^18.2.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
