--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.8.0"
+    "react-router-dom": "^7.8.0",
+    "react-use": "^17.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
