--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.98.4",
     "@vitejs/plugin-react": "^5.0.0",
+    "buffer": "^6.0.3",
     "framer-motion": "^11.3.31",
     "lucide-react": "^0.468.0",
     "react": "^18.2.0",
