--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_URL=http://localhost:4000/api
+VITE_API_URL=https://bpi.currentvpn.io/api
 
 # Frontend Configuration
 VITE_APP_NAME=SpinLoot
